# cranko

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  fetch-latest.ps1  fetch-latest.sh
.config/cranko/: config.toml
book/: book.toml
book/latest/: 404.html  index.html  print.html  searchindex.js  searchindex.json
book/latest/commands/cicd/: cargo-foreach-released.html  cargo-package-released-binaries.html  ci-util-env-to-file.html  github-create-custom-release.html  github-create-releases.html  github-delete-release.html  github-install-credential-helper.html  github-upload-artifacts.html  npm-foreach-released.html  npm-install-token.html  npm-lerna-workaround.html  python-foreach-released.html  python-install-token.html  release-workflow-apply-versions.html  release-workflow-commit.html  release-workflow-tag.html  zenodo-preregister.html  zenodo-publish.html  zenodo-upload-artifacts.html
book/latest/commands/dev/: bootstrap.html  confirm.html  diff.html  log.html  stage.html  status.html
book/latest/commands/util/: git-util-reboot-branch.html  help.html  list-commands.html  show.html
book/latest/concepts/: internal-dependencies.html  projects.html  releases.html  versions.html
book/latest/configuration/: index.html  zenodo.html
book/latest/getting-started/: index.html
book/latest/installation/: index.html
book/latest/integrations/: azure-pipelines.html  csproj.html  python.html  zenodo.html
book/latest/jit-versioning/: index.html
book/latest/workflows-bootstrap/: index.html
book/latest/workflows-cicd/: index.html
book/latest/workflows-dev/: index.html
book/src/: SUMMARY.md  index.md
book/src/commands/cicd/: cargo-foreach-released.md  cargo-package-released-binaries.md  ci-util-env-to-file.md  github-create-custom-release.md  github-create-releases.md  github-delete-release.md  github-install-credential-helper.md  github-upload-artifacts.md  npm-foreach-released.md  npm-install-token.md  npm-lerna-workaround.md  python-foreach-released.md  python-install-token.md  release-workflow-apply-versions.md  release-workflow-commit.md  release-workflow-tag.md  zenodo-preregister.md  zenodo-publish.md  zenodo-upload-artifacts.md
book/src/commands/dev/: bootstrap.md  confirm.md  diff.md  log.md  stage.md  status.md
book/src/commands/util/: git-util-reboot-branch.md  help.md  list-commands.md  show.md
book/src/concepts/: index.md  internal-dependencies.md  projects.md  releases.md  versions.md
book/src/configuration/: index.md  zenodo.md
book/src/getting-started/: index.md
book/src/installation/: index.md
book/src/integrations/: azure-pipelines.md  csproj.md  python.md  zenodo.md
book/src/introduction/: index.md
book/src/jit-versioning/: index.md
book/src/workflows-bootstrap/: index.md
book/src/workflows-cicd/: index.md
book/src/workflows-dev/: index.md
ci/: azure-build-and-test.yml  azure-ci-cd.yml  azure-cross-build.yml  azure-deployment-setup.yml  azure-deployment.yml  azure-install-rust.yml  azure-job-setup.yml  azure-native-build.yml  azure-prep.yml  azure-test-all.yml  zenodo.json5
src/: app.rs  bootstrap.rs  cargo.rs  changelog.rs  config.rs  csproj.rs  env.rs  errors.rs  github.rs  gitutil.rs  graph.rs  loaders.rs  logger.rs  main.rs  npm.rs  project.rs  projmeta.rs  pypa.rs  repository.rs  rewriters.rs  version.rs  zenodo.rs
src/loaders/: cargo.rs
src/projmeta/: cargo.rs
src/rewriters/: cargo.rs
www/: .gitignore  build.sh  fetch-tgz.sh.in  fetch-tgz.tmpl.sh  fetch-zip.tmpl.ps1
www/content/: index.html
