[package]
name = "cranko"
version = "0.2.0"
authors = ["Peter Williams <peter@newton.cx>"]
edition = "2018"
license = "MIT"
description = "A cross-platform, cross-language release automation tool"
homepage = "https://pkgw.github.io/cranko/"
documentation = "https://docs.rs/cranko"
repository = "https://github.com/pkgw/cranko"
readme = "README.md"
keywords = ["ci", "cli", "release-automation"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
  "book",
  "ci",
  "www"
]

[dependencies]
anyhow = "^1"
atomicwrites = "^0.2"
base64 = "^0.12"
cargo_metadata = "^0.10"
chrono = "^0.4"
ci_info = "^0.10"
dynfmt = { version = "^0.1", default-features = false, features = ["curly"] }
flate2 = "^1.0"
git-url-parse = "^0.2"
git2 = "^0.13"
json = "^0.12"
lazy_static = "^1.4"
log = "^0.4"
lru = "^0.6"
petgraph = "^0.5"
reqwest = { version = "^0.10", features = ["blocking"] }
semver = "^0.9"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
structopt = "^0.3"
tar = "^0.4"
target-lexicon = "^0.11"
termcolor = "^1.1"
textwrap = "^0.12"
thiserror = "1.0"
toml = "^0.5"
toml_edit = "^0.2"
zip = { version = "^0.5", default-features = false, features = ["deflate", "time"] }

[features]
vendored-openssl = ["git2/vendored-openssl"]
